--- a/Piplapis/Piplapis.csproj
+++ b/Piplapis/Piplapis.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Configuration Condition=" '$(Configuration)' == '' ">Release</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
@@ -45,6 +45,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="APIError.cs" />
+    <Compile Include="Data\Containers\AvailableData.cs" />
+    <Compile Include="Data\Containers\FieldCount.cs" />
     <Compile Include="Data\Containers\FieldsContainer.cs" />
     <Compile Include="Data\Containers\Person.cs" />
     <Compile Include="Data\Containers\Source.cs" />
@@ -83,6 +85,7 @@
     <Compile Include="Search\SearchAPIResponse.cs" />
     <Compile Include="Search\ShowSources.cs" />
     <Compile Include="Utils\EnumExtensions.cs" />
+    <Compile Include="Utils\TolerantStringEnumConverter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
