--- a/Piplapis/Piplapis.nuspec
+++ b/Piplapis/Piplapis.nuspec
@@ -7,7 +7,7 @@
     <authors>$author$</authors>
     <owners>$author$</owners>
     <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0</licenseUrl>
-    <projectUrl>http://pipl.com/dev</projectUrl>
+    <projectUrl>https://search.pipl.com/</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes>
@@ -15,6 +15,6 @@
 	- Add unit tests.
 	- Force https in request.
 	</releaseNotes>
-    <copyright>Copyright 2016</copyright>
+    <copyright>Copyright 2024</copyright>
   </metadata>
 </package>
